fixed css on Resource div to not override overflow bar on table content

--- a/templates/default/fulldoc/html/css/style.css
+++ b/templates/default/fulldoc/html/css/style.css
@@ -221,9 +221,9 @@ ul.fullTree li:last-child { padding-bottom: 0; }
 .showAll ul.fullTree { display: block; }
 .showAll .inheritName { display: none; }
 
-#search { position: absolute; right: 14px; top: 0px; }
+#search { position: absolute; right: 16px; top: 0px; }
 #search a:link, #search a:visited {
-  display: block; float: left; margin-right: 4px;
+  display: block; float: left; margin-right: 8px;
   padding: 8px 10px; text-decoration: none; color: #05a;
   border: 1px solid #d8d8e5;
   -moz-border-radius-bottomleft: 3px; -moz-border-radius-bottomright: 3px;
